@@ -1,9 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.22 2005/01/10 00:40:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.23 2005/01/14 03:33:32 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
+  13 Jan 2005; John Laliberte <allanonl@bu.edu>
+  Networking.py - Complete rework of the screen using (as a
+  template ) agaffney's network mounts screen. This screen still
+  needs to be "integrated" into the backend, but will be completed
+  within the next few days. At some point the dropdown needs to be
+  changed to an entry combobox.
+
   09 Jan 2005; John Laliberte <allanonl@bu.edu>
   Timezone.py - Updated so it now is integrated with the backend.
   When you select and item in the tree that is not a node,
